--- a/templates/LinerRegression.html
+++ b/templates/LinerRegression.html
@@ -58,7 +58,7 @@
         </h2>
     </form>
 
-    <h3 style="padding-top: 50px">{{prediction_text}} </h3>
+    <h3 style="color: white;padding-top: 50px">{{prediction_text}} </h3>
 </div>
 </body>
 </html>
